# NL-ASL_Vocab_Extractor

./: .gitignore  LOG.md  README.md  extractVocabASL.py  pyproject.toml
@Docs/: Refactoring-ASL-Vocab-Extractor.md
data/asl_vocab/: 6-2_GALLERY.md  GALLERY.md
data/asl_vocab/cards/: stoppedHere.txt
src/asl_vocab/: card_renderer.py  db.py  gallery_renderer.py
