[project]
name = "asl-vocab-extract"
version = "0.1.0"
description = "Standalone ASL vocabulary image ingest tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
